# Parallel_CD_IDW

./: README.md
auxiliary/: generatebau_v_and_w.py
executable/: fast_idw_cd
src/: CMakeLists.txt  Metodos.cpp  Metodos.h  Raster.cpp  Raster.h  common.h  main.cpp
